# airtable-cli

./: .gitignore  README.md  pyproject.toml
airtable_cli/: client.py  config.py  main.py
airtable_cli/commands/: auth.py  bases.py  comments.py  fields.py  records.py  tables.py  webhooks.py
airtable_cli/interactive/: prompts.py  resolvers.py
airtable_cli/models/: base.py  comment.py  common.py  field.py  record.py  table.py  webhook.py
airtable_cli/output/: formatters.py
homebrew/: airtable-cli.rb
tests/: test_cli.py  test_client.py  test_config.py
